# cargo-git-version-setter

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
test_data/with_different_ver/: Cargo.toml
test_data/with_same_ver/: Cargo.toml
