[package]
name = "cargo-git-version-setter"
version = "0.3.0"
edition = "2024"
license = "MIT"
keywords = ["version", "cargo", "git", "git_tag"]
description = "Write version to one or multiple Cargo.toml in a project and create a git tag."
readme = "README.md"
homepage = "https://github.com/doheide/cargo-git-version-setter"
repository = "https://github.com/doheide/cargo-git-version-setter"


[[bin]]
name = "cgvs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "string", "cargo", "color", "help"] }
console = "0.15.11"
indicatif = "0.17.11"
toml_edit = "0.22.24"
regex = "1.11.1"
git2 = "0.20.1"
pathdiff = "0.2.3"
git2_credentials = "0.15.0"
